process a domain event